# NSU-Projects

./: .gitattributes  .gitignore  ConsoleApp1.sln  README.md
CM/: README.md
CS/: .gitignore
Computers and CS/: README.md
DB/: Database1.accdb  README.md
GameOfLife/: CMakeLists.txt  GameOfLife.sln  GameOfLife.vcxproj.filters  main.cpp
GameOfLife/Sample-Test1/: Sample-Test1.vcxproj  test.cpp
GameOfLife/Sample-Test1/FileParser/: fileTest1.txt
GameOfLife/Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
GameOfLife/config/: file.txt
GameOfLife/libs/Cell/: CMakeLists.txt
GameOfLife/libs/Cell/include/: cell.h
GameOfLife/libs/Cell/src/: cell.cpp
GameOfLife/libs/CommandState/include/: commandState.h
GameOfLife/libs/CommandState/src/: commandState.cpp
GameOfLife/libs/ConsoleParser/: CMakeLists.txt
GameOfLife/libs/ConsoleParser/src/: consoleParser.cpp
GameOfLife/libs/ConsoleParser/test/: consoleParserTests.cpp
GameOfLife/libs/Field/src/: field.cpp
GameOfLife/libs/Field/test/: fieldTest1.txt  fieldTest2.txt
GameOfLife/libs/FileParser/: CMakeLists.txt
GameOfLife/libs/Game/include/: game.h
GameOfLife/libs/Message/: CMakeLists.txt
GameOfLife/libs/Message/include/: message.h
GameOfLife/libs/Message/src/: message.cpp
GameOfLife/x64/Debug/: GameOfLife.exe.recipe  GameOfLife.vcxproj.FileListAbsolute.txt
GameOfLife/x64/Debug/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameOfLifeTests/: GameOfLifeTests.vcxproj
NT/: README.md
(+1238 files in other folders)
